--- a/src/pages/components/layout.css
+++ b/src/pages/components/layout.css
@@ -1,13 +1,116 @@
+/* ----- MAIN ------ */
+.textOneMain{
+  position: absolute;
+    top: 40vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    width: 100%;
+    padding: 20px;
+    height: auto;
+}
+.footCs{
+  position: relative;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  bottom: 4vh;
+}
+.modalText{
+  margin-top: 3vh;
+  line-height: 1.2rem;
+  color: white;
+}
+.gradGreen{
+  background: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+}
+.colorTex{
+  color: rgb(0, 116, 188);
+}
+.buttoColW{
+  width: 100%;
+}
+.buttColText{
+  color: #0074BC;
+}
+.buttoColW:hover .buttColText{
+  color: #FFFFFF;
+}
+.backImgOne{
+  background-image: url("../../images/jeepbackOne.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+.backgroundImgTwo{
+  background-image: url("../../images/deliveryback.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+.backgroundImgTre{
+  background-image: url("../../images/partesAgencia.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+.backgroundImgFor{
+  background-image: url("../../images/partesbodega.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+.backgroundImgFive{
+  background-image: url("../../images/partesusadas.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+.overlayTwo{
+  height: 100%;
+  width: auto;
+}
+.firstP{
+  font-size: 3rem;
+  position: absolute;
+  bottom: 0%;
+  color: white;
+  line-height: 1em;
+}
+.goodText{
+  position: relative;
+  bottom: 5vh;
+  line-height: 1rem;
+}
+.navbarPo{
+  position: absolute;
+  top: 0vh;
+}
 .mainLogo{
-    width: 9vw;
+    width: 6rem;
     height: auto;
     position: relative;
-    left: 45%;
-    top: 0vh;
-    padding-top: 1vh;
+    right: 50%;
+    top: 1vh;
+  }
+  .navbar{
+    opacity: .75;
+  }
+ .navbar-item{
+    
+    opacity: 0.75;
   }
   .textUp{
-    z-index: 10;
+    
     position: relative;
     top: 35vh;
     text-align: center;
@@ -17,7 +120,6 @@
     font-size: 3.2em;
   }
   .textUptre{
-    z-index: 10;
     position: relative;
     top: 5vh;
     text-align: center;
@@ -29,22 +131,49 @@
   .slideFirst{
     height: 70vh;
     width: auto;
-    max-width: 100vw;
     position: relative;
-    top: 0;
+    top: -80px;
+    font-family: 'Bebas Neue';
+    word-spacing: 10%;
+    overflow: hidden;
   }
-  /*.slideFirst video{
-    width: 100%;
-    height: 100%;
-    margin: 0%;
-    padding: 0%;
-  }*/
+  .slideFirst img{
+    max-width: 100vw;
+  }
+  .textCoFir {
+    line-height: 1rem;
+    font-family: 'Bebas Neue';
+    color: #0074BC;
+    letter-spacing: .2rem;
+  }
+  .slideTwoTextT{
+    letter-spacing: .2rem;
+  }
+  .backShadow{
+    background: rgba(0,0,0,0.6);
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+  .imgOneHundred{
+    width: 100vw;
+    position: relative;
+    bottom: 15vh;
+  }
+  .slideTwo{
+    font-family: 'Bebas Neue';
+    color: #0074BC;
+    position: relative;
+    bottom: 6vh;
+  }
   .slideSecond{
     position: relative;
     top: 0vh;
     height: 70vh;
     width: auto;
     max-width: 1960px;
+  }
+  .shadow{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .slideTre{
     height: 70vh;
@@ -65,20 +194,16 @@
     width: 100%;
     height: 30%;
     opacity: 1;
-    z-index: 2;
-    transition: opacity 1s;
+    transition: opacity 1s ease 0s;
     position: absolute;
     left: 0%;
-    top: 10vh;
+    top: -5vh;
   }
-  .shadowOne:hover{
-    opacity: 0.6;
-  }
+  
   .shadowTwo{
     width: 100%;
     height: 30%;
     opacity: 1;
-    z-index: 2;
     transition: opacity 1s;
     position: absolute;
     left: 0%;
@@ -91,7 +216,6 @@
     width: 100%;
     height: 20%;
     opacity: 1;
-    z-index: 2;
     transition: opacity 1s;
     position: absolute;
     left: 0%;
@@ -104,3 +228,444 @@
   .shadowTre:hover{
     opacity: 0.6;
   }
+
+  .navbar {
+    border-radius: 23px;
+}
+.navbar-item {
+  border-radius: 23px;
+}
+ link .navbar-item:hover{
+  color:#FFFFFF;
+}
+
+  /* ---- APP CSS ---- */
+
+  #root {
+    display: flex;
+    align-items: center;
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 100vh;
+    width: 100vw;
+  }
+  form {
+    width: 30vw;
+    min-width: 500px;
+    align-self: center;
+    box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+      0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+    border-radius: 7px;
+    padding: 40px;
+    position: relative;
+    right: 4vw;
+
+  }
+  #payment-message {
+    color: rgb(105, 115, 134);
+    font-size: 16px;
+    line-height: 20px;
+    padding-top: 12px;
+    text-align: center;
+  }
+  
+  #payment-element {
+    margin-bottom: 24px;
+  }
+  
+  /* Buttons and links */
+  button {
+    background: #5469d4;
+    font-family: Arial, sans-serif;
+    color: #ffffff;
+    border-radius: 4px;
+    border: 0;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    display: block;
+    transition: all 0.2s ease;
+    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    width: 100%;
+  }
+  
+  button:hover {
+    filter: contrast(115%);
+  }
+  
+  button:disabled {
+    opacity: 0.5;
+    cursor: default;
+  }
+  
+  /* spinner/processing state, errors */
+  .spinner,
+  .spinner:before,
+  .spinner:after {
+    border-radius: 50%;
+  }
+  
+  .spinner {
+    color: #ffffff;
+    font-size: 22px;
+    text-indent: -99999px;
+    margin: 0px auto;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    box-shadow: inset 0 0 0 2px;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  
+  .spinner:before,
+  .spinner:after {
+    position: absolute;
+    content: '';
+  }
+  
+  .spinner:before {
+    width: 10.4px;
+    height: 20.4px;
+    background: #5469d4;
+    border-radius: 20.4px 0 0 20.4px;
+    top: -0.2px;
+    left: -0.2px;
+    -webkit-transform-origin: 10.4px 10.2px;
+    transform-origin: 10.4px 10.2px;
+    -webkit-animation: loading 2s infinite ease 1.5s;
+    animation: loading 2s infinite ease 1.5s;
+  }
+  
+  .spinner:after {
+    width: 10.4px;
+    height: 10.2px;
+    background: #5469d4;
+    border-radius: 0 10.2px 10.2px 0;
+    top: -0.1px;
+    left: 10.2px;
+    -webkit-transform-origin: 0px 10.2px;
+    transform-origin: 0px 10.2px;
+    -webkit-animation: loading 2s infinite ease;
+    animation: loading 2s infinite ease;
+  }
+  .FontOne{
+    font-family: "Sofia", sans-serif;
+  }
+  .mobileNavMargin{
+    margin-top: 3vh;
+  }
+  .textMobileFooter{
+    font-size: 0.8rem;
+  }
+  #footerPagos{
+    margin-top: 5vh;
+  }
+.loader-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #fff;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity .3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  
+.loader{
+    height: 80px;
+    width: 80px;
+  }
+  
+  &.is-active {
+    opacity: 1;
+    z-index: 1;
+  }
+}
+.is-loading {
+  position: relative;
+}
+/*=============================================================================================*/
+  @keyframes loading {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  /* iphoneSE or smaller */
+  @media only screen and (max-width: 389px) {
+    .mobileNavMargin {
+      height: 1vh;
+    }
+    form {
+      width: 100vw !important;
+      margin-left: 3.5vw;
+    }  
+    .colorTex {
+      color: #FFFFFF;
+      position: relative;
+      bottom: 3vh;
+      margin-top: 8vh;
+    }
+    .mainLogo {
+      width: 33% !important;
+      left: 18% !important;
+      top: -3.5vh !important;
+    }
+    .textCoFir{
+      position: relative;
+      bottom: 0vh;
+    }
+    .textMobileCon {
+      height: 15vh;
+    }
+    .title.is-1 {
+      font-size: 1.3rem;
+    }
+    .title.is-2 {
+      font-size: 1.5rem;
+    }
+    .is-size-3-mobile {
+      font-size: 1rem !important;
+    }
+    .title.is-3 {
+      font-size: 1rem !important;
+    }
+    .title.is-5 {
+      font-size: 0.7rem;
+    }
+    .columns.is-mobile > .column.is-half {
+      width: 85%;
+    }
+  }
+  /* MOBILE start */
+  @media only screen and (max-width: 780px) {
+    form {
+      width: 80vw;
+      min-width: initial;
+      margin-left: 7.5vw;
+    }
+    .mobileNavMargin {
+      margin-top: 5vh;
+    }
+    .nosotrosMobOne{
+      margin-bottom: 5vh;
+    }
+    .nosotrosMobDos{
+      margin-bottom: 5vh;
+      margin-top: 5vh;
+    }
+    .footCs {
+      position:relative;
+      top: 5vh;
+    }
+    .homeFooter{
+      position: inherit;
+    }
+    .mainLogo {
+      width: 15%;
+      bottom: 1.4rem;
+      left: 21%;
+      top: -2.3vh;
+      height: auto;
+      right: 0%; 
+      position: relative;
+    }
+    .navbar.is-active{
+      opacity: 0.95;
+  }
+    .is-hidden {
+      display: none;
+    }    
+    .textMobileFooter{
+      font-size: 0.5rem;
+      line-height: 1rem;
+    }
+    .column {
+      padding: 0rem; 
+    }
+    .imgConFir{
+      width: auto;
+      height: 100vh;
+    }
+    .textCoFir {
+      padding-bottom: 2vh;
+    }
+  #navbarBasicExample{
+    border-radius: 1rem;
+    position: relative;
+    bottom: 5vh;
+  }
+  }
+/* Iphone 12 */
+@media (min-width:390px) and (max-width:419px) {
+  body{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    top: 0vh;
+  }
+  form {
+    width: 100vw;
+    position: relative;
+    right: 2vw;
+  }
+  .colorTex {
+    color: white;
+    position: relative;
+    bottom: 3vh;
+  }
+  .textMobileCon {
+    height: 15vh;
+  }
+  .title.is-2 {
+    font-size: 2rem;
+  }
+  .columns.is-mobile > .column.is-half {
+    width: 85%;
+  }
+  .mobileNavMargin{
+    margin-top: 0vh;
+    top: 1rem;
+    height: 2rem;
+  }
+  .mainLogo {
+    width: 25%;
+    left: 19%;
+  }
+  .footerParagen{
+    top: 19vh;
+    position: relative;
+  }
+  #parAgenFoot .footCs{
+    top: 20vh;
+  }
+}
+/* Iphone 14 Pro  */
+@media (min-width:420px) and (max-width:479px) {
+  body{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    top: 0vh;
+  }
+  .payMobile {
+    left: -3%;
+    position: relative;
+    bottom: 3vh;
+  }
+  form {
+    width: 100vw;
+  }
+  .mainLogo {
+    width: 25%;
+    left: 18%;
+  }
+  .mobileNavMargin{
+    margin-top: 0vh;
+    top: 2rem;
+    height: 2rem;
+  }
+  .title.is-1 {
+    font-size: 2.5rem;
+  }
+  .textOneMain{
+    width: 100%;
+    top: 43vh;
+  }
+  .pagosTextMobile{
+    width: 78vw;
+  }
+  .colorTex{
+    color: white;
+    position: relative;
+    bottom: 3vh;
+  }
+  .textMobileCon{
+    height: 18vh;
+  }
+  .textMobileNosotros{
+    position: absolute;
+    top: 75vh;
+    padding-bottom: 3vh;
+  }
+  .textMobileFooter{
+    line-height: 1rem;
+  }
+  .title.is-2 {
+    font-size: 1.5rem;
+  }
+  .is-size-3-mobile {
+    font-size: 1.7rem;
+  }
+  .title.is-3{
+    font-size: 1.1rem;
+  }
+  .title.is-4 {
+    font-size: 0.9rem;
+}
+}
+/* Ipad Mini */
+@media (min-width:480px) and (max-width:780px) { 
+  body{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    top: 0vh;
+  }
+  form {
+    width: 93vw;
+  }
+  .colorTex{
+    color: white;
+    background-color: #76756E;
+    opacity: 1;
+    transition: opacity 1s ease 0s;
+    border-radius: 1rem;
+    padding: 2rem;
+  }
+  .textMobileCon {
+    height: 35vh;
+  }
+  .mobileExpand{
+    width: 100vw;
+  }
+  .homeMobile {
+    position: relative;
+    bottom: 2vh;
+  }
+  .overlayTwo {
+    left: 19vw;
+    position: relative;
+  }
+  .mobileNavMargin {
+    top: 2rem;
+    height: 2rem;
+  }
+  .maindivMobile{
+    position: relative;
+    left: 35vw;
+    width: 77vh;
+  }
+ }
+@media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
+@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
